--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/user-event": "^14.2.0",
     "firebase": "^9.8.1",
     "react": "^18.1.0",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-timeago": "^6.2.1",
     "react-webcam": "^7.0.1",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
